@@ -4,7 +4,6 @@ import com.example.seatchoice.entity.Performance;
 import com.example.seatchoice.entity.document.PerformanceDoc;
 import com.example.seatchoice.repository.PerformanceRepository;
 import com.example.seatchoice.repository.elasticsearch.PerformanceDocRepository;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
@@ -34,7 +33,7 @@ public class PerformanceDocService {
 
 		NativeSearchQueryBuilder queryBuilder = new NativeSearchQueryBuilder();
 		if (after != null) {
-			queryBuilder.withSearchAfter(Arrays.asList(after));
+			queryBuilder.withSearchAfter(List.of(after));
 		}
 
 		NativeSearchQuery searchQuery = queryBuilder
@@ -44,11 +43,9 @@ public class PerformanceDocService {
 			.build();
 
 		SearchHits<PerformanceDoc> searchHits = elasticsearchOperations.search(searchQuery, PerformanceDoc.class);
-		List<PerformanceDoc> results = searchHits.stream()
+		return searchHits.stream()
 			.map(SearchHit::getContent)
 			.collect(Collectors.toList());
-
-		return results;
 	}
 
 	/**
